atualizando exercício cadastro-01 - atualizada as msgs de sucesso e erro no i18n

--- a/cadastro-01/src/messages.properties
+++ b/cadastro-01/src/messages.properties
@@ -18,3 +18,16 @@ site.form.cadastro.select.option.f = Feminino
 site.form.cadastro.select.option.o = Outros
 site.form.cadastro.button.enviar = Cadastrar
 ##FORM##
+
+##MSGs-SUCCESS##
+site.msg.del = Os dados foram EXCLUIDOS com SUCESSO!
+site.msg.upd = Os dados foram ATUALIZADOS com SUCESSO!
+site.msg.ins = Os dados foram GRAVADOS com SUCESSO
+##MSGs-SUCCESS##
+##MSGs-ERROR##
+site.msg.err_del = Ocorreu um erro ao tentar EXCLUIR os DADOS.
+site.msg.err_upd = Ocorreu um erro ao tentar ATUALIZAR os DADOS.
+site.msg.err_ins = Ocorreu um erro ao tentar GRAVAR os DADOS.
+site.msg.err_list = Ocorreu um erro com a SELECAO atual.
+site.msg.err_list_by_id = Ocorreu um erro com a SELECAO atual.
+##MSGs-ERROR##
