--- a/cadastro-01/src/messages_en.properties
+++ b/cadastro-01/src/messages_en.properties
@@ -18,3 +18,17 @@ site.form.cadastro.select.option.f = Female
 site.form.cadastro.select.option.o = Outhers
 site.form.cadastro.button.enviar = Submit
 ##FORM##
+
+
+##MSGs-SUCCESS##
+site.msg.del = SUCCESSFULLY EXCLUDED data!
+site.msg.upd = The data has been SUCCESSFULLY UPDATED!
+site.msg.ins = The data was SUCCESSFULLY RECORDED!
+##MSGs-SUCCESS##
+##MSGs-ERROR##
+site.msg.err_del = An error occurred while trying to DELETE DATA.
+site.msg.err_upd = An error occurred while trying to UPDATE DATA.
+site.msg.err_ins = An error occurred while attempting to RECORD DATA.
+site.msg.err_list = An error occurred with the current SELECTION.
+site.msg.err_list_by_id = An error occurred with the current SELECTION.
+##MSGs-ERROR##
