criando exemplo com i18n - finalizado

--- a/cadastro-01/src/messages.properties
+++ b/cadastro-01/src/messages.properties
@@ -1,33 +1,49 @@
-site.titulo = CADASTRO
+site.cadastro.titulo = CADASTRO
+site.atualiza.titulo = ATUALIZAÇÃO
+site.lista.titulo = LISTA
 
-##LINKS##
+##LINKS##/todas
 site.menu.header.inicio   = Início
 site.menu.header.clientes = Clientes
-##LINKS##
+##LINKS##/todas
 
-##FORM##
+##MENSAGENS
+site.paginas.index.sucesso.del = Registro EXCLUÍDO com SUCESSO!
+site.paginas.index.sucesso.ins = Os dados foram INSERIDOS com SUCESSO!
+site.paginas.index.sucesso.upd = Os dados foram ATUALIZADOS com SUCESSO!
+site.paginas.index.erro.del_err = Ocorreu um erro ao tentar EXCLUIR o registro!
+site.paginas.index.erro.ins_err = Ocorreu um erro ao tentar INSERIR os dados!
+site.paginas.index.erro.upd_err = Ocorreu um erro ao tentar ATUALIZAR os dados!
+site.paginas.index.erro.list_err = Ocorreu um erro com a SELEÇÃO atual.
+##MENSAGENS
+
+##FORM##pagina index.jsp/atualiza.jsp
 site.form.cadastro.legenda = Cadastro de Clientes
+site.form.update.legenda = Atualização de Cadastro
 site.form.cadastro.label.nome = Nome
 site.form.cadastro.label.sobrenome = Sobrenome
 site.form.cadastro.label.data_nasc = Data Nascimento
 site.form.cadastro.label.genero = Gênero
 site.form.cadastro.label.telefone =	Telefone
+site.form.cadastro.placeholder.nome = Digite seu nome
+site.form.cadastro.placeholder.sobrenome = Digite seu sobrenome
 site.form.cadastro.select.option.sel = Selecione uma opção
 site.form.cadastro.select.option.m = Masculino
 site.form.cadastro.select.option.f = Feminino
 site.form.cadastro.select.option.o = Outros
-site.form.cadastro.button.enviar = Cadastrar
-##FORM##
+site.form.cadastro.button.cadastrar = Cadastrar 
+site.form.update.button.atualizar = Atualizar
+##FORM##pagina index.jsp/atualiza.jsp
 
-##MSGs-SUCCESS##
-site.msg.del = Os dados foram EXCLUIDOS com SUCESSO!
-site.msg.upd = Os dados foram ATUALIZADOS com SUCESSO!
-site.msg.ins = Os dados foram GRAVADOS com SUCESSO
-##MSGs-SUCCESS##
-##MSGs-ERROR##
-site.msg.err_del = Ocorreu um erro ao tentar EXCLUIR os DADOS.
-site.msg.err_upd = Ocorreu um erro ao tentar ATUALIZAR os DADOS.
-site.msg.err_ins = Ocorreu um erro ao tentar GRAVAR os DADOS.
-site.msg.err_list = Ocorreu um erro com a SELECAO atual.
-site.msg.err_list_by_id = Ocorreu um erro com a SELECAO atual.
-##MSGs-ERROR##
+##TABELA## lista.jsp
+site.tabela.cabecalho.id = ID
+site.tabela.cabecalho.nome = Nome
+site.tabela.cabecalho.dt_nasc = Dt Nasc
+site.tabela.cabecalho.genero = Gênero
+site.tabela.cabecalho.telefone = Tel
+site.tabela.cabecalho.editar = Editar
+##TABELA## lista.jsp
+
+##RODAPÉ## lista.jsp
+site.rodape.info.organizacao = Info Organizacional &copy;2020
+##RODAPÉ## lista.jsp
