--- a/cadastro-01/src/messages_en.properties
+++ b/cadastro-01/src/messages_en.properties
@@ -1,34 +1,50 @@
-site.titulo = REGISTER
+site.cadastro.titulo = REGISTER
+site.atualiza.titulo = UPDATE
+site.lista.titulo = LIST
 
-##LINKS##
+##LINKS##/todas
 site.menu.header.inicio   = Home
 site.menu.header.clientes = Client
-##LINKS##
+##LINKS##/todas
 
-##FORM##
+##MENSAGENS	=	
+site.paginas.index.sucesso.del = Registration SUCCESSFULLY DELETED!
+site.paginas.index.sucesso.ins = The data was SUCCESSFULLY INSERTED!
+site.paginas.index.sucesso.upd = The data has been SUCCESSFULLY UPDATED!
+site.paginas.index.erro.del_err	= An error occurred while trying to DELETE the record!
+site.paginas.index.erro.ins_err	= An error occurred while trying to INSERT data!
+site.paginas.index.erro.upd_err	= An error occurred while trying to UPDATE the data!
+site.paginas.index.erro.list_err = An error occurred with the current SELECTION.
+##MENSAGENS	=	
+
+##FORM##pagina index.jsp/atualiza.jsp
 site.form.cadastro.legenda = Customer Registrations
+site.form.update.legenda = Update Registrations
 site.form.cadastro.label.nome = Name
 site.form.cadastro.label.sobrenome = Last Name
 site.form.cadastro.label.data_nasc = Birthdate
 site.form.cadastro.label.genero = Genre
 site.form.cadastro.label.telefone =	Telephone
+site.form.cadastro.placeholder.nome = Type your name
+site.form.cadastro.placeholder.sobrenome = Type your last name
 site.form.cadastro.select.option.sel = Select a option
 site.form.cadastro.select.option.m = Male
 site.form.cadastro.select.option.f = Female
-site.form.cadastro.select.option.o = Outhers
-site.form.cadastro.button.enviar = Submit
-##FORM##
+site.form.cadastro.select.option.o = Others
+site.form.cadastro.button.cadastrar = Submit
+site.form.update.button.atualizar = Update
+##FORM##pagina index.jsp/atualiza.jsp
 
+##TABELA## lista.jsp
+site.tabela.cabecalho.id = ID
+site.tabela.cabecalho.nome = Name
+site.tabela.cabecalho.dt_nasc = Birth Date
+site.tabela.cabecalho.genero = Genre
+site.tabela.cabecalho.telefone = Telephone
+site.tabela.cabecalho.editar = Edit
+##TABELA## lista.jsp
 
-##MSGs-SUCCESS##
-site.msg.del = SUCCESSFULLY EXCLUDED data!
-site.msg.upd = The data has been SUCCESSFULLY UPDATED!
-site.msg.ins = The data was SUCCESSFULLY RECORDED!
-##MSGs-SUCCESS##
-##MSGs-ERROR##
-site.msg.err_del = An error occurred while trying to DELETE DATA.
-site.msg.err_upd = An error occurred while trying to UPDATE DATA.
-site.msg.err_ins = An error occurred while attempting to RECORD DATA.
-site.msg.err_list = An error occurred with the current SELECTION.
-site.msg.err_list_by_id = An error occurred with the current SELECTION.
-##MSGs-ERROR##
+##RODAPÉ## lista.jsp
+site.rodape.info.organizacao = Organizational Info &copy;2020
+##RODAPÉ## lista.jsp
+
